<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_principal"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /><![CDATA[

    ]]>21/10/2022

    <EditText
        android:id="@+id/editCadParceiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:hint="@string/nome_parceiro"
        android:importantForAutofill="no"
        android:inputType=""
        android:padding="15dp"
        tools:ignore="TextFields,TextContrastCheck" />

    <EditText
        android:id="@+id/editModelos"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/modelos_cortes"
        android:inputType=""
        android:padding="15dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editAgendamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/agendamento"
        android:inputType=""
        android:padding="15dp"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <EditText
        android:id="@+id/editBarbeiros"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/barbeiros"
        android:inputType=""
        android:padding="15dp"
        tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/editBotao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_button_cad"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        </LinearLayout>
